@@ -8,7 +8,7 @@ You can get either the source code release of Apache Tajo or check out the devel
 Dowload the latest source release
 ================================================
 
-Choose a download site from this list of `Apache Download Mirrors <http://www.apache.org/dyn/closer.cgi/incubator/tajo>`_. 
+Choose a download site from this list of `Apache Download Mirrors <http://www.apache.org/dyn/closer.cgi/incubator/tajo>`_.
 Click on the suggested mirror link. This will take you to a mirror of Tajo Releases. 
 Download the file that ends in .tar.gz to your local filesystem; e.g. tajo-0.8.0-incubating.tar.gz. 
 
@@ -20,13 +20,13 @@ Decompress and untar your download and then change into the unpacked directory. 
 Get the source code via Git
 ================================================
 
-The development codebase can also be downloaded from `the Apache git repository <https://git-wip-us.apache.org/repos/asf/incubator-tajo.git>`_ as follows: ::
+The development codebase can also be downloaded from `the Apache git repository <https://git-wip-us.apache.org/repos/asf/tajo.git>`_ as follows: ::
 
-  git clone https://git-wip-us.apache.org/repos/asf/incubator-tajo.git
+  git clone https://git-wip-us.apache.org/repos/asf/tajo.git
 
-A read-only git repository is also mirrored on `Github <https://github.com/apache/incubator-tajo>`_.
+A read-only git repository is also mirrored on `Github <https://github.com/apache/tajo>`_.
 
-Once you have downloaded Tajo, follow the `getting started instructions <http://tajo.incubator.apache.org/tajo-0.8.0-doc.html#GettingStarted>`_, and take a look at the rest of the Tajo documentation.
+Once you have downloaded Tajo, follow the `getting started instructions <http://tajo.apache.org/tajo-0.8.0-doc.html#GettingStarted>`_, and take a look at the rest of the Tajo documentation.
 
 
 
