@@ -69,7 +69,7 @@
     </head>
 
     <links>
-      <item name="GIT" href="https://git-wip-us.apache.org/repos/asf/incubator-tajo.git" />
+      <item name="GIT" href="https://git-wip-us.apache.org/repos/asf/tajo.git" />
     </links>
 
     <breadcrumbs>
