@@ -584,6 +584,9 @@ Release 0.8.0 - unreleased
 
   TASKS
 
+    TAJO-700: Update site, wikis, pom.xml and other resources to point to the 
+    new repository location. (jihoon)
+
     TAJO-694: Bump up hadoop to 2.3.0. (jinho)
 
     TAJO-684: Add functions about time. (Alvin Henrick via jihoon)
